--- a/templates/articles/header.html.twig
+++ b/templates/articles/header.html.twig
@@ -1,12 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'articles/index.html.twig' %}
 
 {% block title %}Header{% endblock %}
 
 {% block body %}
-    <nav>
-        <div>
-            <h1 class="title">{{ header_text }}</h1>
-        </div>
-    </nav>
+    <Header>
+        <nav>
+            <div>
+                <h1 class="title">{{ message }}</h1>
+                <h2>Votre serviteur</h2>
+            </div>
+        </nav>
+    </Header>
 {% endblock %}
 
