--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -2,19 +2,125 @@
 
 {% block title %}Hello ArticlesController!{% endblock %}
 
+
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/chris/PidevProDev/src/Controller/ArticlesController.php</code></li>
-        <li>Your template at <code>C:/Users/chris/PidevProDev/templates/articles/index.html.twig</code></li>
-    </ul>
+<div class="grid-container header">
+    <div class="grid-item " id="i1">
+        <img src="{{asset('Images/person.svg')}}" width="32"  height="32"/>
+        <img src="{{asset('Images/list.svg')}}" width="32"  height="32"/>
+        <h1 id="menu">MENU</h1>
+    </div>
+    <div class="grid-item titre">
+        <h1 >M TOUNSI L TOUNSI</h1>
+    </div>
+    <div class="grid-item " id="i2">
+        <img src="{{asset('Images/search.svg')}}" width="32"  height="32"/>
+        <img src="{{asset('Images/heart.svg')}}" width="32"  height="32"/>
+        <img src="{{asset('Images/cart.svg')}}" width="32"  height="32"/>
+    </div>
 </div>
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{{asset('Images/ferme.jpeg')}}" class="d-block w-100 h-386" alt="..." height=386px>
+    </div>
+    <div class="carousel-item">
+      <img src="{{ asset('Images/bio.jpeg') }}" class="d-block w-100" alt="..." width=100% height=386px>
+    </div>
+    <div class="carousel-item">
+      <img src="{{asset('Images/souk.jpeg')}}" class="d-block w-100" alt="..." height=386px>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<br><br>
+<select >
+  <option value="" disabled selected>Triez par </option>
+  <option value="valeur1">Option 1</option>
+  <option value="valeur2">Option 2</option>
+  <option value="valeur3">Option 3</option>
+  <option value="valeur4">Option 4</option>
+</select>
+<hr width="75%" mt-0>
+
+{% for chunk in articles|batch(4) %}
+<div class="container">
+    <div class="row">
+        {% for article in chunk %}
+        <div class="col-md-3">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ article.image }}" class="card-img-top img-fluid" style="height: 300px; object-fit: cover;"   alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ article.nom }}</h5>
+                    <p class="card-text">{{ article.description }}</p>
+                    <a href="#" class="btn btn-primary">Ajouter au panier</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endfor %}
+
+<footer>
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
+       <h2 class="ftco-heading-2">Menu</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="py-2 d-block">Shop</a></li>
+                <li><a href="#" class="py-2 d-block">About</a></li>
+                <li><a href="#" class="py-2 d-block">Journal</a></li>
+                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+              </ul>
+    </div>
+    <div class="col">
+        <ul>
+	        <li ><a href="#" class="py-2 d-block">Shipping Information</a></li>
+	        <li ><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
+	        <li ><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
+	        <li ><a href="#" class="py-2 d-block">Privacy Policy</a></li>
+	      </ul>
+        <ul class="list-unstyled">
+	        <li><a href="#" class="py-2 d-block">FAQs</a></li>
+	        <li><a href="#" class="py-2 d-block">Contact</a></li>
+	      </ul>
+    </div>
+    <div class="col">
+<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                <li ><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	              </ul>
+	            </div>
+    </div>
+  </div>
+</div>
+    <p style="text-align:center"> &copy; 2024 Nom de votre entreprise. Tous droits réservés.</p>
+
+</footer>
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
+
