--- a/templates/articles/backoffice/add.html.twig
+++ b/templates/articles/backoffice/add.html.twig
@@ -49,4 +49,44 @@
     </div>
     {{ form_end(form) }}
 </div>
+
+<footer>
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
+       <h2 class="ftco-heading-2">Menu</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="py-2 d-block">Shop</a></li>
+                <li><a href="#" class="py-2 d-block">About</a></li>
+                <li><a href="#" class="py-2 d-block">Journal</a></li>
+                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+              </ul>
+    </div>
+    <div class="col">
+        <ul>
+	        <li ><a href="#" class="py-2 d-block">Shipping Information</a></li>
+	        <li ><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
+	        <li ><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
+	        <li ><a href="#" class="py-2 d-block">Privacy Policy</a></li>
+	      </ul>
+        <ul class="list-unstyled">
+	        <li><a href="#" class="py-2 d-block">FAQs</a></li>
+	        <li><a href="#" class="py-2 d-block">Contact</a></li>
+	      </ul>
+    </div>
+    <div class="col">
+<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                <li ><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	              </ul>
+	            </div>
+    </div>
+  </div>
+</div>
+    <p style="text-align:center"> &copy; 2024 Nom de votre entreprise. Tous droits réservés.</p>
+
+</footer>
 {% endblock %}
