--- a/templates/users/allusers.html.twig
+++ b/templates/users/allusers.html.twig
@@ -8,7 +8,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header bg-info">
-                    <h4 class="m-b-0 text-white">All Users</h4>
+                    <h4 class="m-b-0 text-white">All Users connected {{user2.nom}}</h4>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -33,7 +33,8 @@
                                         <td>{{ user.prenom }}</td>
                                         <td>{{ user.email }}</td>
                                         <td>{{ user.role }}</td>
-                                        <td>{{ include('Users/delete2.html.twig') }} </td>
+                                        <td>{{ include('users/delete2.html.twig') }} </td>
+                                        <td> <a href="{{path('update',{'id':user.idclient})}}">edit</a></td>
                                         <!-- Ajoutez d'autres colonnes si nécessaire -->
                                     </tr>
                                 {% endfor %}
