--- a/templates/users/home.html.twig
+++ b/templates/users/home.html.twig
@@ -16,7 +16,7 @@ HOME
                                     <div class="d-flex no-block align-items-center">
                                         <div>
                                             <h3><i class="icon-screen-desktop"></i></h3>
-                                            <p class="text-muted">MYNEW CLIENTS</p>
+                                            <p class="text-muted">{{user2.email}}</p>
                                         </div>
                                         <div class="ml-auto">
                                             <h2 class="counter text-primary">23</h2>
