--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -360,8 +360,8 @@
                         <li class="nav-small-cap">--- Fournisseur</li>
                         <li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-truck"></i><span class="hide-menu">Fournisseur</span></a>
                             <ul aria-expanded="false" class="collapse">
-                                <li><a href="form-basic.html">Basic Forms</a></li>
-                                <li><a href="form-layout.html">Form Layouts</a></li>
+                                <li><a href="aff">all vendeur</a></li>
+                                <li><a href="inscription">vendeur inscription</a></li>
                                 <li><a href="form-addons.html">Form Addons</a></li>
                                 <li><a href="form-material.html">Form Material</a></li>
                      
