--- a/templates/users/allusers.html.twig
+++ b/templates/users/allusers.html.twig
@@ -1,48 +1,45 @@
 {% extends 'back.html.twig' %}
+
 {% block title %}
     All Users
 {% endblock %}
 
 {% block ktiba %}
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-header bg-info">
-                    <h4 class="m-b-0 text-white">All Users connected {{user2.nom}}</h4>
-                </div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
+   <div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header bg-info">
+                <h4 class="m-b-0 text-white">User connected : {{ user2.nom }} {{ user2.prenom }}</h4>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="user-table" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Email</th>
+                                <th>Role</th>
+                                <th>Delete</th>
+                                <th>Edit</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for user in users %}
                                 <tr>
-                                    
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Email</th>
-                                    <th>Role</th>
-                                    <th>Delete</th>
-                                    
-                                    <!-- Ajoutez d'autres colonnes si nécessaire -->
+                                    <td>{{ user.nom }}</td>
+                                    <td>{{ user.prenom }}</td>
+                                    <td>{{ user.email }}</td>
+                                    <td>{{ user.role }}</td>
+                                    <td>{{ include('users/delete2.html.twig') }}</td>
+                                    <td><a href="{{ path('update', {'id': user.idclient}) }}">edit</a></td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {% for user in users %}
-                                    <tr>
-                                        
-                                        <td>{{ user.nom }}</td>
-                                        <td>{{ user.prenom }}</td>
-                                        <td>{{ user.email }}</td>
-                                        <td>{{ user.role }}</td>
-                                        <td>{{ include('users/delete2.html.twig') }} </td>
-                                        <td> <a href="{{path('update',{'id':user.idclient})}}">edit</a></td>
-                                        <!-- Ajoutez d'autres colonnes si nécessaire -->
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
