--- a/templates/users/allusers.html.twig
+++ b/templates/users/allusers.html.twig
@@ -9,7 +9,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header bg-info">
-                <h4 class="m-b-0 text-white">User connected : {{ user2.nom }} {{ user2.prenom }}</h4>
+                <h4 class="m-b-0 text-white"> {{ user2.nom }} {{ user2.prenom }}</h4>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
