--- a/templates/vendeur/aff.html.twig
+++ b/templates/vendeur/aff.html.twig
@@ -3,55 +3,37 @@
     All Users
 {% endblock %}
 
-{% block ktiba %}
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-header bg-info">
-                    <h4 class="m-b-0 text-white">All Vendeurs</h4>
-                </div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>IdVendeur</th>
-                
-                <th>nom</th>
+    
+                {% block ktiba %}
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="card-title">Show Vendeurs</h4>
+                                 {% for vendeur in Vendeur %}
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-3"><img src="../assets/images/big/img1.jpg" class="img-fluid" /></div>
+                                    <div class="col-lg-8 col-md-9" id="slimtest1" style="height: 250px;">
+                                        <div>
+                                             <p>{{vendeur.nom}} </p>
+                                             <p>{{vendeur.nomproduit}} </p>
+                                             <p>{{vendeur.email}} </p>
+                                             <p>{{vendeur.motdepasse}} </p>
+                                             <p>{{vendeur.description}} </p>
+                                             <p>{{vendeur.type}} </p>
+                                              <p> <a href="{{ path('app_update', {'id': vendeur.IdVendeur}) }}">edit</a></p> 
+                                             <p>{{ include('vendeur/delete.html.twig') }} </p>
+                                             <p>{{ include('vendeur/delete.html.twig') }} </p>
 
-                <th>nomproduit</th>
 
-                <th>email</th>
-
-                <th>motdepasse</th>
-
-                <th>description</th>
-
-                <th>type</th>
-
-          
-
-            </tr>
-        </thead>
-        <tbody>
-           {% for vendeur in Vendeur %}
-              <tr>
-                  <td>{{vendeur.IdVendeur}} </td>
-                  <td>{{vendeur.nom}} </td>
-                <td>{{vendeur.nomproduit}} </td>
-                <td>{{vendeur.email}} </td>
-                <td>{{vendeur.motdepasse}} </td>
-                <td>{{vendeur.description}} </td>
-                <td>{{vendeur.type}} </td>
-                <td> <a href="{{ path('app_update', {'id': vendeur.IdVendeur}) }}">edit</a></td> 
-                <td>{{ include('vendeur/delete.html.twig') }} </td>
-              </tr>
-          {% endfor %}
-        </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <br>
+                                <br>
+                                <br>
+                                {% endfor %}
+                               
+                            </div>
+                        </div>
+                {% endblock %}
