--- a/templates/vendeur/aff.html.twig
+++ b/templates/vendeur/aff.html.twig
@@ -11,10 +11,16 @@
                             <div class="card-body">
                                 <h4 class="card-title">Show Vendeurs</h4>
                                  {% for vendeur in Vendeur %}
+                                 
                                 <div class="row">
                                     <div class="col-lg-4 col-md-3"><img src="../assets/images/big/img1.jpg" class="img-fluid" /></div>
                                     <div class="col-lg-8 col-md-9" id="slimtest1" style="height: 250px;">
                                         <div>
+                                        {% for stock in Stock %}
+                                        {% if  stock.IdVendeur == vendeur %}
+                                        <h5 style="color: green;">This product is already added to the Database</h5>
+                                        {% endif %}
+                                         {% endfor %}
                                              <p>{{vendeur.nom}} </p>
                                              <p>{{vendeur.nomproduit}} </p>
                                              <p>{{vendeur.email}} </p>
@@ -23,7 +29,7 @@
                                              <p>{{vendeur.type}} </p>
                                               <p> <a href="{{ path('app_update', {'id': vendeur.IdVendeur}) }}">edit</a></p> 
                                              <p>{{ include('vendeur/delete.html.twig') }} </p>
-                                             <p>{{ include('vendeur/delete.html.twig') }} </p>
+                                             <p> <a href="{{ path('app_stock_new', {'vendeurId': vendeur.IdVendeur}) }}">insert to Stock</a></p> 
 
 
                                         </div>
@@ -32,6 +38,7 @@
                                 <br>
                                 <br>
                                 <br>
+                               
                                 {% endfor %}
                                
                             </div>
