--- a/templates/users/home.html.twig
+++ b/templates/users/home.html.twig
@@ -5,6 +5,7 @@ HOME
 
 {% block ktiba%}
 
+
     <div class="row">
                     <!-- Column -->
                     <div class="col-lg-4">
@@ -120,25 +121,32 @@ HOME
                                 <!-- Carousel items -->
                                 <div class="carousel-inner">
                                     <div class="active carousel-item">
-                                        <div class="overlaybg"><img src="../assets/images/news/slide1.jpg" class="img-fluid" /></div>
-                                        <div class="news-content carousel-caption"><span class="label label-danger label-rounded">Primary</span>
-                                            <h4>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h4> <a href="javascript:void(0)">Read More</a></div>
+                                        <div class="overlaybg"><img src="../assets/images/news/23.jpg" class="img-fluid" /></div>
+                                        <div class="news-content carousel-caption"><span class="label label-danger label-rounded"></span>
+                                            <h4></h4> <a href="javascript:void(0)"></a></div>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="overlaybg"><img src="../assets/images/news/slide1.jpg" /></div>
-                                        <div class="news-content carousel-caption"><span class="label label-primary label-rounded">Primary</span>
-                                            <h4>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h4> <a href="javascript:void(0)">Read More</a></div>
+                                        <div class="overlaybg"><img src="../assets/images/news/23.jpg" /></div>
+                                        <div class="news-content carousel-caption"><span class="label label-primary label-rounded"></span>
+                                            <h4></h4> <a href="javascript:void(0)"></a></div>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="overlaybg"><img src="../assets/images/news/slide1.jpg" /></div>
-                                        <div class="news-content carousel-caption"><span class="label label-success label-rounded">Primary</span>
-                                            <h4>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h4> <a href="javascript:void(0)">Read More</a></div>
+                                        <div class="overlaybg"><img src="../assets/images/news/23.jpg" /></div>
+                                        <div class="news-content carousel-caption"><span class="label label-success label-rounded"></span>
+                                            <h4></h4> <a href="javascript:void(0)"></a></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                 
+   
+            </div>
+            <!-- ============================================================== -->
+            <!-- End Container fluid  -->
+            <!-- ============================================================== -->
+        </div>
 
                 
 
