--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -14,7 +14,9 @@
     <!-- This page CSS -->
     <!-- chartist CSS -->
     {% block style %}
-    <link href="dist/css/pages/dashboard2.css" rel="stylesheet">
+        <!-- Dashboard 31 Page CSS -->
+    <link href="../dist/css/pages/dashboard3.css" rel="stylesheet">
+    <link href="../dist/css/pages/dashboard2.css" rel="stylesheet">
        <link href="../assets/node_modules/morrisjs/morris.css" rel="stylesheet">
     <!-- Vector CSS -->
     <link href="../assets/node_modules/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
@@ -421,6 +423,8 @@
     <script src="../dist/js/dashboard1.js"></script>
     <script src="../assets/node_modules/toast-master/js/jquery.toast.js"></script>
       <script src="../dist/js/dashboard2.js"></script>
+        <script src="../dist/js/dashboard4.js"></script>
+          <script src="../dist/js/dashboard3.js"></script>
    
 
 <script>
