--- a/templates/front2.html.twig
+++ b/templates/front2.html.twig
@@ -183,7 +183,7 @@
                         <li class="nav-small-cap">--- MY ACCOUNT </li>
                         </li>
                         <li> <a class="" href="{{ path ('profile')}}" aria-expanded="false"><i class="ti-user"></i><span class="hide-menu"> My Profile</span></a>
-                        <li> <a class="" href="{{ path('update', {'id': user.idclient}) }}" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu"> Account Setting</span></a>
+                        <li> <a class="" href="{{ path('update2', {'id': user.idclient}) }}" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu"> update</span></a>
                         <li> <a class="" href="{{ path ('logout')}}" aria-expanded="false"><i class="fa fa-power-off"></i><span class="hide-menu">  Logout</span></a>
                         </li>
                     </ul>
