--- a/templates/vendeur/aff.html.twig
+++ b/templates/vendeur/aff.html.twig
@@ -5,10 +5,10 @@
 
     
                 {% block ktiba %}
-                <div class="row">
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-body">
+                <div class="row"id="user-table">
+                    <div class="col-12"id="user-table">
+                        <div class="card"id="user-table">
+                            <div class="card-body"id="user-table">
                                 <h4 class="card-title">Show Vendeurs</h4>
                                  {% for vendeur in Vendeur %}
                     
