--- a/templates/vendeur/updatefront.html.twig
+++ b/templates/vendeur/updatefront.html.twig
@@ -1,15 +1,15 @@
-{% extends 'back.html.twig' %}
+{% extends 'front2.html.twig' %}
 
 {% block title %}
-    update
+   tounsi lel tounsi
 {% endblock %}
 
-{% block ktiba %}
+{% block ktiba3 %}
   
 <div class="row">
     <div class="col-12">
         <div class="card card-body">
-            <h4 class="card-title">Update</h4>
+            <h4 class="card-title">Signup</h4>
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
                {{ form_start(form, {'attr': {'class': 'register-form', 'novalidate': 'novalidate'}}) }}
@@ -58,7 +58,7 @@
 <div class="form-group form-button">
     {{ form_row(form) }}
     
-    <button type="submit" class="btn btn-dark">update</button>
+    <button type="submit" class="btn btn-dark">Signup</button>
 </div>
 {{ form_end(form) }}
 
