--- a/templates/users/userfront2.html.twig
+++ b/templates/users/userfront2.html.twig
@@ -31,7 +31,7 @@ TOUNSI LL TOUNSI
                     <label for="login-check"> Remember Me</label>
                 </div>
                 <div class="two">
-                    <label><a href="#">Forgot password?</a></label>
+                    <label><a href="{{ path ('Forgotpassword')}}">Forgot password?</a></label>
                 </div>
             </div>
         </div>
