--- a/templates/users/Forgotpassword.html.twig
+++ b/templates/users/Forgotpassword.html.twig
@@ -1,32 +1,18 @@
-{# templates/security/forgot_password.html.twig #}
+{# templates/users/forgot_password.html.twig #}
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Mot de passe oublié{% endblock %}
+{% block title %}Réinitialisation de mot de passe{% endblock %}
 
 {% block body %}
-    <h1>Mot de passe oublié</h1>
-
-    {% if app.flashes('success') %}
-        <div class="alert alert-success">
-            {{ app.flashes('success')[0] }}
-        </div>
-    {% endif %}
-
-    {% if app.flashes('error') %}
+    <h1>Réinitialisation de mot de passe</h1>
+    {% if form_errors(form) %}
         <div class="alert alert-danger">
-            {{ app.flashes('error')[0] }}
+            {{ form_errors(form) }}
         </div>
     {% endif %}
-
-    <form action="{{ path('Forgotpassword') }}" method="post">
-        {{ form_start(form) }}
-        <div class="form-group">
-            {{ form_label(form.email) }}
-            {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.email) }}
-        </div>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
         <button type="submit" class="btn btn-primary">Envoyer</button>
-        {{ form_end(form) }}
-    </form>
+    {{ form_end(form) }}
 {% endblock %}
