--- a/templates/users/delete2.html.twig
+++ b/templates/users/delete2.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_users_delete2', {'id': user.idclient}) }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
+<form method="post" action="{{ path('app_users_delete', {'id': user.idclient}) }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.idclient) }}">
     <button class="btn">Delete</button>
 </form>
