--- a/templates/users/userfront2.html.twig
+++ b/templates/users/userfront2.html.twig
@@ -12,6 +12,11 @@ TOUNSI LL TOUNSI
                 <span>Don't have an account? <a href="{{ path ('userfront')}}" onclick="register()">Sign Up</a></span>
                 <header>Login</header>
             </div>
+            {% if error %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endif %}
             {{ form_start(loginForm) }}
             <div class="input-box">
                 {{ form_row(loginForm.email, {'attr': {'class': 'input-field', 'placeholder': 'Email'}}) }}
@@ -31,7 +36,7 @@ TOUNSI LL TOUNSI
                     <label for="login-check"> Remember Me</label>
                 </div>
                 <div class="two">
-                    <label><a href="{{ path ('Forgotpassword')}}">Forgot password?</a></label>
+                    <label><a href="">Forgot password?</a></label>
                 </div>
             </div>
         </div>
