--- a/templates/vendeur/Profilfront.html.twig
+++ b/templates/vendeur/Profilfront.html.twig
@@ -55,7 +55,7 @@ TOUNSI LL TOUNSI
                 </br>
                 <small class="text-muted p-t-30 db">Social Profile</small>
                 <br>
-                        <div id="map" style="width: 50%; height: 50vh;"></div>
+                        <div id="map" style="width: 50%; height: 50vh; margin: auto;"></div>
   <script>
     // Set the latitude and longitude obtained previously
     const latitude = {{ latitude }};
