--- a/templates/vendeur/Signup.html.twig
+++ b/templates/vendeur/Signup.html.twig
@@ -5,57 +5,60 @@ TOUNSI LL TOUNSI
 
 {% block ktiba2 %}
 <div class="wrapper">
-    <div class="form-box">
-        <form method="post">
-            {{ form_start(form) }}
-            <div class="two-forms">
+   
+
+    
+        <form method="post" enctype="multipart/form-data">
+
+             {{ form_start(form, {'attr': {'class': 'register-form', 'novalidate': 'novalidate'}}) }}
+         
                 <div class="input-box">
-                    {{ form_row(form.nom, {'attr': {'class': 'input-field', 'placeholder': 'Firstname'}}) }}
+                    {{ form_row(form.nom, {'attr': {'class': 'input-field', 'placeholder': 'nom'}}) }}
                     {{ form_errors(form.nom) }}
                     <i class="bx bx-user"></i>
                 </div>
                  <div class="input-box">
-                    {{ form_row(form.nomproduit, {'attr': {'class': 'input-field', 'placeholder': 'Firstname'}}) }}
+                    {{ form_row(form.nomproduit, {'attr': {'class': 'input-field', 'placeholder': 'nomproduit'}}) }}
                     {{ form_errors(form.nomproduit) }}
                     <i class="bx bx-user"></i>
                 </div>
+        
                  <div class="input-box">
-                    {{ form_row(form.email, {'attr': {'class': 'input-field', 'placeholder': 'Firstname'}}) }}
+                    {{ form_row(form.email, {'attr': {'class': 'input-field', 'placeholder': 'email'}}) }}
                     {{ form_errors(form.email) }}
                     <i class="bx bx-user"></i>
                 </div>
                  <div class="input-box">
-                    {{ form_row(form.motdepasse , {'attr': {'class': 'input-field', 'placeholder': 'Firstname'}}) }}
+                    {{ form_row(form.motdepasse , {'attr': {'class': 'input-field', 'placeholder': 'motdepasse'}}) }}
                     {{ form_errors(form.motdepasse) }}
                     <i class="bx bx-user"></i>
                 </div>
                   <div class="input-box">
-                    {{ form_row(form.description , {'attr': {'class': 'input-field', 'placeholder': 'Firstname'}}) }}
+                    {{ form_row(form.description , {'attr': {'class': 'input-field', 'placeholder': 'description'}}) }}
                     {{ form_errors(form.description) }}
                     <i class="bx bx-user"></i>
                 </div>
                   <div class="input-box">
-                    {{ form_row(form.type , {'attr': {'class': 'input-field', 'placeholder': 'Firstname'}}) }}
+                    {{ form_row(form.type , {'attr': {'class': 'input-field', 'placeholder': 'type'}}) }}
                     {{ form_errors(form.type) }}
                     <i class="bx bx-user"></i>
                 </div>
+                 <div class="input-box">
+                 <label for="vendeur_product_image">Image</label>
+                       {{ form_widget(form.image, {'attr': {'class': 'form-control', 'placeholder': 'Enter image'}}) }}
+                        {{ form_errors(form.image) }}
+                  
+                </div>
 
 
-            </div>
-            <div class="input-box">
-                <input type="submit" class="submit" value="Register">
-            </div>
-            <div class="two-col">
-                <div class="one">
-                    <input type="checkbox" id="register-check">
-                    <label for="register-check"> Remember Me</label>
-                </div>
-                <div class="two">
-                    <label><a href="#">Terms et conditions</a></label>
-                </div>
+            
+
+          <div class="input-box">
+               <button type="submit" class="submit">Signup</button>
             </div>
             {{ form_end(form) }}
-        </form>
-    </div>
+            
+       </form>
+ 
 </div>
 {% endblock %}
